@@ -2,22 +2,19 @@ package us.potatoboy.skywars.game;
 
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Multimap;
+import eu.pb4.sgui.api.elements.GuiElementBuilder;
 import it.unimi.dsi.fastutil.objects.Object2ObjectMap;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
-import net.minecraft.entity.Entity;
 import net.minecraft.entity.damage.DamageSource;
-import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
 import net.minecraft.registry.RegistryKeys;
 import net.minecraft.scoreboard.AbstractTeam;
-import net.minecraft.scoreboard.ServerScoreboard;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
 import net.minecraft.util.*;
 import net.minecraft.registry.RegistryKey;
-import net.minecraft.util.hit.EntityHitResult;
 import net.minecraft.world.GameMode;
 import net.minecraft.world.GameRules;
 import us.potatoboy.skywars.game.map.SkyWarsMap;
@@ -27,27 +24,26 @@ import us.potatoboy.skywars.game.ui.KitSelectorUI;
 import us.potatoboy.skywars.kit.Kit;
 import us.potatoboy.skywars.kit.KitRegistry;
 import xyz.nucleoid.fantasy.RuntimeWorldConfig;
-import xyz.nucleoid.plasmid.game.GameOpenContext;
-import xyz.nucleoid.plasmid.game.GameOpenProcedure;
-import xyz.nucleoid.plasmid.game.GameResult;
-import xyz.nucleoid.plasmid.game.GameSpace;
-import xyz.nucleoid.plasmid.game.common.GameWaitingLobby;
-import xyz.nucleoid.plasmid.game.common.config.PlayerConfig;
-import xyz.nucleoid.plasmid.game.common.team.*;
-import xyz.nucleoid.plasmid.game.event.GameActivityEvents;
-import xyz.nucleoid.plasmid.game.event.GamePlayerEvents;
-import xyz.nucleoid.plasmid.util.ItemStackBuilder;
-import xyz.nucleoid.plasmid.util.PlayerRef;
+import xyz.nucleoid.plasmid.api.game.GameOpenContext;
+import xyz.nucleoid.plasmid.api.game.GameOpenProcedure;
+import xyz.nucleoid.plasmid.api.game.GameResult;
+import xyz.nucleoid.plasmid.api.game.GameSpace;
+import xyz.nucleoid.plasmid.api.game.common.GameWaitingLobby;
+import xyz.nucleoid.plasmid.api.game.common.config.PlayerLimiterConfig;
+import xyz.nucleoid.plasmid.api.game.common.config.WaitingLobbyConfig;
+import xyz.nucleoid.plasmid.api.game.common.team.*;
+import xyz.nucleoid.plasmid.api.game.common.ui.WaitingLobbyUiLayout;
+import xyz.nucleoid.plasmid.api.game.event.GameActivityEvents;
+import xyz.nucleoid.plasmid.api.game.event.GamePlayerEvents;
+import xyz.nucleoid.plasmid.api.game.event.GameWaitingLobbyEvents;
+import xyz.nucleoid.plasmid.api.util.PlayerRef;
+import xyz.nucleoid.stimuli.event.EventResult;
 import xyz.nucleoid.stimuli.event.item.ItemUseEvent;
 import xyz.nucleoid.stimuli.event.player.PlayerAttackEntityEvent;
 import xyz.nucleoid.stimuli.event.player.PlayerDamageEvent;
 import xyz.nucleoid.stimuli.event.player.PlayerDeathEvent;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 public class SkyWarsWaiting {
     private final GameSpace gameSpace;
@@ -67,7 +63,7 @@ public class SkyWarsWaiting {
         this.spawnLogic = new SkyWarsSpawnLogic(gameSpace, map);
         this.participants = new Object2ObjectOpenHashMap<>();
 
-        config.kits().ifLeft(kits -> this.kits.addAll(kits.stream().map(KitRegistry::get).collect(Collectors.toList())));
+        config.kits().ifLeft(kits -> this.kits.addAll(kits.stream().map(KitRegistry::get).toList()));
 
         config.kits().ifRight(allKits -> {
             if (allKits) {
@@ -87,11 +83,20 @@ public class SkyWarsWaiting {
                 .setGameRule(GameRules.DO_FIRE_TICK, true);
 
         return context.openWithWorld(worldConfig, (game, world) -> {
-            GameWaitingLobby.addTo(game, new PlayerConfig(1, map.spawns.size() * config.teamSize(), config.teamSize() + 1, PlayerConfig.Countdown.DEFAULT));
+            GameWaitingLobby.addTo(game,
+                    new WaitingLobbyConfig(
+                            new PlayerLimiterConfig(
+                                    OptionalInt.of(map.spawns.size() * config.teamSize()),
+                                    true),
+                            config.teamSize(),
+                            map.spawns.size() * config.teamSize(),
+                            WaitingLobbyConfig.Countdown.DEFAULT
+                    )
+            );
 
             var waiting = new SkyWarsWaiting(game.getGameSpace(), world, map, context.config());
-
-            game.listen(GamePlayerEvents.OFFER, offer -> offer.accept(world, waiting.spawnLogic.getRandomSpawnPos(offer.player().getRandom())));
+            game.listen(GameWaitingLobbyEvents.BUILD_UI_LAYOUT, waiting::onBuildUiLayout);
+            game.listen(GamePlayerEvents.ACCEPT, offer -> offer.teleport(world, waiting.spawnLogic.getRandomSpawnPos()));
             game.listen(GameActivityEvents.REQUEST_START, waiting::requestStart);
             game.listen(GameActivityEvents.TICK, waiting::tick);
             game.listen(GamePlayerEvents.JOIN, waiting::playerJoin);
@@ -99,20 +104,32 @@ public class SkyWarsWaiting {
             game.listen(PlayerDeathEvent.EVENT, waiting::onPlayerDeath);
             game.listen(PlayerDamageEvent.EVENT, waiting::onPlayerDamage);
             game.listen(ItemUseEvent.EVENT, waiting::onUseItem);
-            game.listen(PlayerAttackEntityEvent.EVENT, (attacker, hand, attacked, hitResult) -> ActionResult.FAIL);
+            game.listen(PlayerAttackEntityEvent.EVENT, (attacker, hand, attacked, hitResult) -> EventResult.DENY);
 
             LootHelper.fillChests(world, map, config, 1);
         });
     }
 
-    private TypedActionResult<ItemStack> onUseItem(ServerPlayerEntity playerEntity, Hand hand) {
+    private void onBuildUiLayout(WaitingLobbyUiLayout layout, ServerPlayerEntity player) {
+        SkyWarsWaiting waiting = this;
+
+        layout.addLeading(() -> new GuiElementBuilder(Items.COMPASS)
+                .setItemName(Text.translatable("skywars.item.select_kit")
+                .setStyle(Style.EMPTY.withItalic(false).withColor(Formatting.GOLD)))
+                .setCallback((index, type, action, gui) -> {
+                    KitSelectorUI.openSelector(player, waiting);
+                })
+            .build());
+    }
+
+    private ActionResult onUseItem(ServerPlayerEntity playerEntity, Hand hand) {
         SkyWarsPlayer participant = participants.get(PlayerRef.of(playerEntity));
 
         if (participant != null && playerEntity.getInventory().getMainHandStack().getItem() == Items.COMPASS) {
             KitSelectorUI.openSelector(playerEntity, this);
         }
 
-        return TypedActionResult.pass(playerEntity.getStackInHand(hand));
+        return ActionResult.PASS;
     }
 
     private void playerLeave(ServerPlayerEntity playerEntity) {
@@ -120,8 +137,6 @@ public class SkyWarsWaiting {
     }
 
     private GameResult requestStart() {
-        ServerScoreboard scoreboard = gameSpace.getServer().getScoreboard();
-
         HashSet<GameTeam> teams = new HashSet<>();
         List<DyeColor> teamColors = new ArrayList<>(Arrays.asList(
                 DyeColor.BLUE,
@@ -194,22 +209,18 @@ public class SkyWarsWaiting {
         this.spawnPlayer(player);
     }
 
-    private ActionResult onPlayerDeath(ServerPlayerEntity player, DamageSource source) {
+    private EventResult onPlayerDeath(ServerPlayerEntity player, DamageSource source) {
         player.setHealth(20.0f);
         this.spawnPlayer(player);
-        return ActionResult.FAIL;
+        return EventResult.DENY;
     }
 
-    private ActionResult onPlayerDamage(ServerPlayerEntity player, DamageSource source, float amount) {
-        return ActionResult.FAIL;
+    private EventResult onPlayerDamage(ServerPlayerEntity player, DamageSource source, float amount) {
+        return EventResult.DENY;
     }
 
     private void spawnPlayer(ServerPlayerEntity player) {
         this.spawnLogic.resetPlayer(player, GameMode.ADVENTURE);
         this.spawnLogic.spawnPlayer(player, world);
-
-        player.getInventory().setStack(0, ItemStackBuilder.of(Items.COMPASS)
-                .setName(Text.translatable("skywars.item.select_kit")
-                        .setStyle(Style.EMPTY.withItalic(false).withColor(Formatting.GOLD))).build());
     }
 }
